# xtool

./: CMakeLists.txt  Package.swift
.devcontainer/: devcontainer.json  docker-compose.yml
Linux/: build.sh
Sources/PackLib/: PackSchema.swift  Packer.swift  Planner.swift
Sources/XToolProductTypes/: Dump.swift  Product.swift  ProductSchema.swift
cmake/: FindPackageDescription.cmake
macOS/: project.yml
